[gd_scene load_steps=2 format=3 uid="uid://cnvdu7rmsmxjv"]

[ext_resource type="Script" path="res://scripts/input_gui.gd" id="1_46otd"]

[node name="Input GUI" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
script = ExtResource("1_46otd")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 2
max_length = 50
expand_to_text_length = true

[node name="xPosLabel" type="Label" parent="."]
layout_mode = 2
text = "X Position"

[node name="xEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="yPosLabel" type="Label" parent="."]
layout_mode = 2
text = "Y Position"

[node name="yEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="WireSizeMin" type="Label" parent="."]
layout_mode = 2
text = "Min Wire Size"

[node name="wireMinEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="WireSizeMax" type="Label" parent="."]
layout_mode = 2
text = "Max Wire Size"

[node name="wireMaxEdit" type="LineEdit" parent="."]
layout_mode = 2

[node name="colorLabel" type="Label" parent="."]
layout_mode = 2
text = "Wire Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 2

[node name="typeLabel" type="Label" parent="."]
layout_mode = 2
text = "Type"

[node name="typeEdit" type="LineEdit" parent="."]
layout_mode = 2
max_length = 20
expand_to_text_length = true

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = "Delete"

[connection signal="text_changed" from="NameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="text_changed" from="xEdit" to="." method="_on_x_edit_text_changed"]
[connection signal="text_changed" from="yEdit" to="." method="_on_y_edit_text_changed"]
[connection signal="text_changed" from="wireMinEdit" to="." method="_on_wire_edit_text_changed"]
[connection signal="text_changed" from="wireMinEdit" to="." method="_on_wire_min_edit_text_changed"]
[connection signal="text_changed" from="wireMaxEdit" to="." method="_on_wire_edit_text_changed"]
[connection signal="text_changed" from="wireMaxEdit" to="." method="_on_wire_max_edit_text_changed"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="text_changed" from="typeEdit" to="." method="_on_type_edit_text_changed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
